--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="ui attached segment">
                     <p class="m-text">赵睿宇，一个在读大学生。时间过得好快呀，已经大三了。自己却还是个菜鸟。。后知后觉，开始干干干！！！</p>
-                    <p class="m-text">热爱编程，正在打磨编程技术，让自己的代码看起来更加舒服。</p>
+                    <p class="m-text">热爱编程，打磨编程技术。</p>
                 </div>
                 <div class="ui attached segment">
                     <div class="ui orange basic left pointing label">编程</div>
@@ -60,11 +60,13 @@
                     <div class="ui orange basic left pointing label m-margin-tb-tiny">CSS</div>
                     <div class="ui orange basic left pointing label m-margin-tb-tiny">MYSQL</div>
                     <div class="ui orange basic left pointing label m-margin-tb-tiny">SSM</div>
+                    <div class="ui orange basic left pointing label m-margin-tb-tiny">Spring</div>
                     <div class="ui orange basic left pointing label m-margin-tb-tiny">SpringBoot</div>
                     <div class="ui orange basic left pointing label m-margin-tb-tiny">...</div>
                 </div>
                 <div class="ui bottom attached segment">
-                    <a href="#" class="ui circular icon button"><i class="github icon"></i></a>
+<!--                    <a href="#" class="ui circular icon button"><i class="gitee icon"></i></a>-->
+                    <a href="https://gitee.com/zhao--ruiyu/spring-boot-blog-master" target="_blank" class="ui circular icon button"><img src="static/images/gitee.png" th:src="@{/images/gitee.png}" width="12"></a>
                     <a href="#" class="ui circular icon button"><i class="github icon"></i></a>
                     <a href="#" class="ui qq circular icon button" data-content="1447051936" data-position="bottom center"><i class="qq icon"></i></a>
                 </div>
