--- a/src/main/resources/templates/archives.html
+++ b/src/main/resources/templates/archives.html
@@ -44,41 +44,23 @@
                     <h3 class="ui teal header">归档</h3>
                 </div>
                 <div class="right aligned column ">
-                    共<h2 class="ui orange header m-inline-block m-text-thin"> 14 </h2>篇博客
+                    共<h2 class="ui orange header m-inline-block m-text-thin" th:text="${blogCount}"> 14 </h2>篇博客
                 </div>
             </div>
         </div>
-
-        <h2 class="ui center aligned header">2018</h2>
-        <div class="ui fluid vertical menu">
-            <a href="#" class="item">
+        <div th:each="item : ${archiveMap}">
+            <h2 class="ui center aligned header" th:text="${item.key}">2018</h2>
+            <div class="ui fluid vertical menu" >
+                <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" class="item"  th:each="blog : ${item.value}">
                 <span>
-                    <i class="mini teal circle icon"></i> 关于可以练习的清单
-                    <div class="ui teal basic left pointing label m-padded-tb-mini">9月03</div>
+                    <i class="mini teal circle icon"></i> <span th:text="${blog.title}">关于可以练习的清单</span>
+                    <div class="ui teal basic left pointing label m-padded-tb-mini" th:text="${#dates.format(blog.updateTime,'MMMdd')}">9月03</div>
                 </span>
-                <div class="ui orange basic
-                 label m-padded-tb-mini">原创</div>
-            </a>
-        </div>
-
-        <h2 class="ui center aligned header">2017</h2>
-        <div class="ui fluid vertical menu">
-            <a href="#" class="item">
-                <span>
-                    <i class="mini teal circle icon"></i> 关于可以练习的清单
-                    <div class="ui teal basic left pointing label m-padded-tb-mini">9月03</div>
-                </span>
-                <div class="ui orange basic
-                 label m-padded-tb-mini">原创</div>
-            </a>
-            <a href="#" class="item">
-                <span>
-                    <i class="mini teal circle icon"></i> 关于可以练习的清单
-                    <div class="ui teal basic left pointing label m-padded-tb-mini">9月03</div>
-                </span>
-                <div class="ui orange basic
-                 label m-padded-tb-mini">原创</div>
-            </a>
+                    <div class="ui orange basic
+                 label m-padded-tb-mini" th:text="${blog.flag}">原创
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 </div>
