--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title th:replace="${title}">博客详情</title>
+    <link rel="icon" href="#" th:href="@{/images/logo.ico}"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
     <link rel="stylesheet" href="../static/lib/animate/animate.min.css" th:href="@{/lib/animate/animate.min.css}"/>
     <link rel="stylesheet" href="../static/lib/typo/typo.css" th:href="@{/lib/typo/typo.css}"/>
@@ -13,7 +14,7 @@
 </head>
 <body>
 
-<nav th:fragment="menu(n)" class="ui inverted attached segment m-padded-tb-mini animated fadeInDown">
+<nav th:fragment="menu(n)"  class="ui inverted attached segment m-padded-tb-mini animated fadeInDown">
     <div class="ui container">
         <div class="ui inverted secondary stackable  menu">  <!--stackable 可堆叠的 应用在移动端-->
             <h2 class="ui teal header item">Blog</h2>
@@ -32,7 +33,7 @@
             <div class="nav_item right item m-mobile-hide">
                 <form action="#" th:action="@{/search}" name="search">
                     <div class="ui icon inverted transparent  input">
-                        <input type="text" name="query" placeholder="Search..." required="required" th:value="${query}">
+                        <input type="text" name="query" placeholder="快来找你要的东东ヾ(≧▽≦*)o..." required="required" th:value="${query}">
                         <i onclick="document.forms['search'].submit()" class="search link icon"></i>
                     </div>
                 </form>
@@ -46,7 +47,7 @@
     </a>
 </nav>
 <!--底部footer-->
-<footer th:fragment="footer" class="ui inverted vertical segment m-padded-tb-massive">
+<footer th:fragment="footer" class="ui inverted vertical segment m-padded-tb-massive" style="padding: 40px 0px!important;">
     <!--    居中-->
     <div class="ui center aligned container">
         <div class="ui inverted divided stackable grid">
@@ -84,6 +85,11 @@
         <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright &copy; 2021 by Newbie Zry</p>
     </div>
 
+    <div th:if="${blog}==null" id="toolbar" class="m-fixed m-bottom-right m-padded" style="display: none">
+        <a  id="comment_toTop" class="m-toTop">
+            <i class="ui angle up icon"></i>
+        </a>
+    </div>
 </footer>
 <th:block th:fragment="script">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
@@ -96,6 +102,21 @@
     <script>
         $(function () {
             $('#newBlog-container').load(/*[[@{/footer/newBlog}]]*/"/Blog/footer/newBlog");
+        });
+
+        $("#comment_toTop").click(function () {
+            $(window).scrollTo(0, 300);
+        });
+        var waypoint = new Waypoint({
+            element: document.getElementById('pointTop'),
+            handler: function (direction) {
+                if (direction == 'down') {
+                    $("#toolbar").show(400);
+                } else {
+                    $("#toolbar").hide(500);
+                }
+                console.log('Scrolled to waypoint!' + direction)
+            }
         });
     </script>
 </th:block>
