--- a/src/main/resources/templates/admin/_fragments.html
+++ b/src/main/resources/templates/admin/_fragments.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:replace="${title}">博客详情</title>
+    <link rel="icon" href="#" th:href="@{/images/logo.ico}"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
     <!--    引入editor.md-编译器css-->
     <link rel="stylesheet"  href="../../static/lib/editormd/css/editormd.min.css"
