--- a/src/main/resources/templates/admin/blog-input.html
+++ b/src/main/resources/templates/admin/blog-input.html
@@ -62,7 +62,7 @@
             <div class="required field">
                 <div class="ui left labeled input">
                     <div class="ui selection compact teal basic dropdown label">
-                        <input type="hidden" value="原创" name="flag" th:value="${blog.flag}">
+                        <input type="hidden" value="原创" name="flag" th:value="${blog.flag}==null ? '原创':${blog.flag}">
                         <i class="dropdown icon"></i>
                         <div class="text">原创</div>
                         <div class="menu">
