--- a/src/main/resources/templates/archives.html
+++ b/src/main/resources/templates/archives.html
@@ -34,14 +34,14 @@
 
 <!--top attached 完整拼接成一个相连区域 bottom attached-->
 <!--中间内容-->
-<div class="m-container-small m-padded-tb-4em ">
+<div id="pointTop" class="m-container-small m-padded-tb-4em ">
     <div class="ui container">
         <!-- header-->
-        <div class="ui top attached segment">
+        <div class="ui top attached segment animated flipInX">
             <div class="ui middle aligned two column grid">
                 <div class="column">
 
-                    <h3 class="ui teal header">归档</h3>
+                    <h3 class="ui  header">归档</h3>
                 </div>
                 <div class="right aligned column ">
                     共<h2 class="ui orange header m-inline-block m-text-thin" th:text="${blogCount}"> 14 </h2>篇博客
@@ -49,8 +49,8 @@
             </div>
         </div>
         <div th:each="item : ${archiveMap}">
-            <h2 class="ui center aligned header" th:text="${item.key}">2018</h2>
-            <div class="ui fluid vertical menu" >
+            <h2 class="ui center aligned header animated fadeInUp" th:text="${item.key}">2018</h2>
+            <div class="ui fluid vertical menu animated fadeInUpBig" >
                 <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" class="item"  th:each="blog : ${item.value}">
                 <span>
                     <i class="mini teal circle icon"></i> <span th:text="${blog.title}">关于可以练习的清单</span>
