--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <!--导航-->
-<nav th:replace="_fragments::menu(1)" class="ui inverted attached segment m-padded-tb-mini animated fadeInDown">
+<nav th:replace="_fragments::menu(0)" class="ui inverted attached segment m-padded-tb-mini animated fadeInDown">
     <div class="ui container">
         <div class="ui inverted secondary stackable  menu">  <!--stackable 可堆叠的 应用在移动端-->
             <h2 class="ui teal header item">Blog</h2>
@@ -542,42 +542,53 @@ h5,h6{font-size:1em;}
                         <h3 class="ui dividing header">评论</h3>
                         <div class="comment" th:each="comment : ${comments}">
                             <a class="avatar">
-                                <img src="https://unsplash.it/100/100?image=1005" th:src="@{${comment.avatar}}"  alt="">
+                                <img src="https://unsplash.it/100/100?image=1005" th:src="@{${comment.avatar}}" alt="">
                             </a>
                             <div class="content">
-                                <a class="author" >
+                                <a class="author">
                                     <span th:text="${comment.nickname}">Matt</span>
-                                    <div class="ui mini basic teal left pointing label m-padded-mini" th:if="${comment.adminComment}">博主</div>
+                                    <div class="ui mini basic teal left pointing label m-padded-mini"
+                                         th:if="${comment.adminComment}">博主
+                                    </div>
                                 </a>
                                 <div class="metadata">
-                                    <span class="date" th:text="${#dates.format(comment.createTime,'yyyy-MM-dd HH:mm')}">Today at 5:42PM</span>
+                                    <span class="date"
+                                          th:text="${#dates.format(comment.createTime,'yyyy-MM-dd HH:mm')}">Today at 5:42PM</span>
                                 </div>
                                 <div class="text" th:text="${comment.content}">
                                     How artistic!
                                 </div>
                                 <div class="actions">
-                                    <a class="reply" data-commentid="1" data-commentnickname="Matt" th:attr="data-commentid=${comment.id},data-commentnickname=${comment.nickname}" onclick="reply(this)">回复</a>
+                                    <a class="reply" data-commentid="1" data-commentnickname="Matt"
+                                       th:attr="data-commentid=${comment.id},data-commentnickname=${comment.nickname}"
+                                       onclick="reply(this)">回复</a>
                                 </div>
                             </div>
                             <div class="comments" th:if="${#arrays.length(comment.replyComments)}>0">
                                 <div class="comment" th:each="reply : ${comment.replyComments}">
                                     <a class="avatar">
-                                        <img src="https://unsplash.it/100/100?image=1005" th:src="@{${reply.avatar}}" alt="">
+                                        <img src="https://unsplash.it/100/100?image=1005" th:src="@{${reply.avatar}}"
+                                             alt="">
                                     </a>
                                     <div class="content">
-                                        <a class="author" >
+                                        <a class="author">
                                             <span th:text="${reply.nickname}">小红</span>&nbsp;
-                                            <div class="ui mini basic teal left pointing label m-padded-mini" th:if="${reply.adminComment}">博主</div>
+                                            <div class="ui mini basic teal left pointing label m-padded-mini"
+                                                 th:if="${reply.adminComment}">博主
+                                            </div>
                                             &nbsp;<span th:text="|@ ${reply.parentComment.nickname}|" class="m-teal">@ 小白</span>
                                         </a>
                                         <div class="metadata">
-                                            <span class="date" th:text="${#dates.format(reply.createTime,'yyyy-MM-dd HH:mm')}">Today at 5:42PM</span>
+                                            <span class="date"
+                                                  th:text="${#dates.format(reply.createTime,'yyyy-MM-dd HH:mm')}">Today at 5:42PM</span>
                                         </div>
                                         <div class="text" th:text="${reply.content}">
                                             How artistic!
                                         </div>
                                         <div class="actions">
-                                            <a class="reply" data-commentid="1" data-commentnickname="Matt" th:attr="data-commentid=${reply.id},data-commentnickname=${reply.nickname}" onclick="reply(this)">回复</a>
+                                            <a class="reply" data-commentid="1" data-commentnickname="Matt"
+                                               th:attr="data-commentid=${reply.id},data-commentnickname=${reply.nickname}"
+                                               onclick="reply(this)">回复</a>
                                         </div>
                                     </div>
                                 </div>
@@ -598,23 +609,26 @@ h5,h6{font-size:1em;}
                     <div class="field m-mobile-wide m-margin-bottom-small">
                         <div class="ui left icon input">
                             <i class="user icon"></i>
-                            <input type="text" name="nickname" th:value="${session.User}!=null ? ${session.User.nickname}" placeholder="姓名">
+                            <input type="text" name="nickname"
+                                   th:value="${session.User}!=null ? ${session.User.nickname}" placeholder="姓名">
                         </div>
                     </div>
                     <div class="field m-mobile-wide m-margin-bottom-small">
                         <div class="ui left icon input">
                             <i class="mail icon"></i>
-                            <input type="text" name="email" placeholder="邮箱" th:value="${session.User}!=null ? ${session.User.email}">
+                            <input type="text" name="email" placeholder="邮箱"
+                                   th:value="${session.User}!=null ? ${session.User.email}">
                         </div>
                     </div>
                     <div class="field m-mobile-wide m-margin-bottom-small" th:if="${session.User}==null">
                         <div class="ui left icon input">
                             <i class="image outline icon"></i>
-                            <input type="text" name="avatar" placeholder="头像地址..." >
+                            <input type="text" name="avatar" placeholder="头像地址...">
                         </div>
                     </div>
                     <div class="field m-mobile-wide m-margin-bottom-small">
-                        <button id="commentpost-btn" class="ui teal button m-mobile-wide"><i class="edit icon"></i>发布</button>
+                        <button id="commentpost-btn" class="ui teal button m-mobile-wide"><i class="edit icon"></i>发布
+                        </button>
                     </div>
                 </div>
             </div>
@@ -743,7 +757,7 @@ h5,h6{font-size:1em;}
     });
 
     $("#toTop_but").click(function () {
-        $(window).scrollTo(0, 100);
+        $(window).scrollTo(0, 300);
     });
 
     var waypoint = new Waypoint({
