--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -33,13 +33,13 @@
 </nav>
 <!--top attached 完整拼接成一个相连区域 bottom attached-->
 <!--中间内容-->
-<div class="m-container-small m-padded-tb-4em ">
+<div id="pointTop" class="m-container-small m-padded-tb-4em ">
     <div class="ui container">
         <!-- header-->
-        <div class="ui top attached segment">
-            <div class="ui middle aligned two column grid">
+        <div class="ui top attached segment m-border-radius animated flipInX">
+            <div class="ui middle aligned two column grid ">
                 <div class="column">
-                    <h3 class="ui teal header">标签</h3>
+                    <h3 class="ui  header">标签</h3>
                 </div>
                 <div class="right aligned column ">
                     共<h2 class="ui orange header m-inline-block m-text-thin" th:text="${#arrays.length(tags)}"> 14 </h2>
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div>
-        <div class="ui attached segment m-padded-tb-2em">
+        <div class="ui attached segment m-padded-tb-2em m-border-radius animated fadeIn ">
             <a href="#" th:href="@{/tags/{id}(id=${tag.id})}"
                class="ui  basic left pointing large label m-margin-tb-tiny"
                th:classappend="${activeTagId==tag.id} ? 'teal'" th:each="tag : ${tags}">
@@ -55,8 +55,8 @@
                 <div class="detail" th:text="${tag.blogCount}">23</div>
             </a>
         </div>
-        <div class="ui top attached teal segment">
-            <div class="ui padded vertical  segment m-padded-tb-2em m-mobile--clear" th:each="blog : ${pageInfo.list}">
+        <div class="ui top attached  segment  m-border-radius animated fadeInUp">
+            <div class="ui padded  segment m-padded-tb-2em m-mobile-clear" th:each="blog : ${pageInfo.list}">
                 <div class="ui mobile reversed stackable grid">  <!--mobile reversed  手机反转-->
                     <div class="eleven wide column">
                         <h3 class="ui header"><a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank"
@@ -111,7 +111,7 @@
                 </div>
             </div>
         </div>
-        <div class="ui bottom attached segment">
+        <div class="ui bottom attached segment" th:if="${pageInfo.total}>1">
             <div class="ui middle aligned two column grid">
                 <div class="column" th:if="${pageInfo.pageNum != 1}">
                     <a href="#" th:href="@{'/tags/'+${activeTagId}(page=${page.number}-1)}"
@@ -183,6 +183,7 @@
 
         不过，通过使用 "switch" 参数，您能够规定只删除或只添加类。*/
     });
+
 
 </script>
 
