--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -34,13 +34,13 @@
 
 <!--top attached 完整拼接成一个相连区域 bottom attached-->
 <!--中间内容-->
-<div id="pointTop" class="m-container m-padded-tb-4em ">
+<div id="pointTop" class="m-container-normal m-padded-tb-4em ">
     <div class="ui container">
         <div class="ui stackable grid">
             <div class="eleven wide column">
                 <img src="https://unsplash.it/800/600?image=1005" alt="" class="ui rounded image">
             </div>
-            <div class="five wide column">
+            <div class="five wide column m-card-mod">
                 <div class="ui top attached segment">
                     <div class="ui header">关于我</div>
                 </div>
@@ -69,7 +69,7 @@
                     <a href="https://gitee.com/zhao--ruiyu/spring-boot-blog-master" target="_blank"  data-content="点击跳转gitee" data-position="bottom center" class="ui gitee circular icon button"><img src="static/images/gitee.png" th:src="@{/images/gitee.png}" width="12"></a>
                     <a href="#" class="ui circular icon button"><i class="github icon"></i></a>
                     <a href="https://blog.csdn.net/qq_45802080" target="_blank" class="ui csdn circular icon button" data-content="点击跳转CSDN" data-position="bottom center"><i class="copyright outline icon"></i></a>
-                    <a href="#" class="ui qq circular icon button" data-content="1447051936" data-position="bottom center"><i class="qq icon"></i></a>
+                    <a href="#" class="ui qq circular icon button" data-content="1447051936" data-position="bottom center"><i class="blue qq icon"></i></a>
                 </div>
 
             </div>
