--- a/src/main/resources/static/css/me.css
+++ b/src/main/resources/static/css/me.css
@@ -1,222 +1,290 @@
 /*<!--    ui    teal蓝色  header    -->*/
-body{
 
-    background-image: url("https://pic2.zhimg.com/80/v2-7ba604144747aec55216d41aa5fc5790_720w.jpg?source=1940ef5c");
-    /*苍穹灰*/
-    background-image: url("https://pic2.zhimg.com/80/v2-63a84dd240663f0f5cfe0b62709d7506_720w.jpg?source=1940ef5c");
-    /*纸棕*/
-    background-image: url("https://pic2.zhimg.com/80/v2-adcd3dcb41f7153019b5aa1cd2187b67_720w.jpg?source=1940ef5c");
+body {
+    /*background-image: url("https://pic2.zhimg.com/80/v2-7ba604144747aec55216d41aa5fc5790_720w.jpg?source=1940ef5c");*/
+    /*!*苍穹灰*!*/
+    /*background-image: url("https://pic2.zhimg.com/80/v2-63a84dd240663f0f5cfe0b62709d7506_720w.jpg?source=1940ef5c");*/
+    /*!*纸棕*!*/
+    /*background-image: url("https://pic2.zhimg.com/80/v2-adcd3dcb41f7153019b5aa1cd2187b67_720w.jpg?source=1940ef5c");*/
     background-image: url("https://www.bleshi.com/resources/bg.jpg");
     background-image: url("https://image.guiyunweb.com/2020/09/%E5%B0%81%E9%9D%A2%E5%9B%BE20200935_1600918678671.jpg");
-    background-image: url("https://yaoo.xin/bg1.jpg");
+    background-image: url("/Blog/images/background/bg1.jpg");
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
 }
+
+html {
+    scroll-behavior: smooth !important;
+}
+
 /* common */
 ::-webkit-scrollbar {
-    width: 8px;
+    width: 5px;
     height: 6px;
 }
+
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
     /*border-radius: 10px;*/
     background: #EDEDED;
+
 }
+
 ::-webkit-scrollbar-thumb {
     border-radius: 3px;
     /*background-color: #5755D9;*/
     background-color: #767676;
-    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%,rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
-}
-body{
-background-color: #f8f9fa;
-font-weight: 400;
-/*color: #757575;*/
-cursor: url(/Blog/images/mouses/cur1.cur), default;
+    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
 }
 
-nav{
+body {
+    background-color: #f8f9fa;
+    font-weight: 400;
+    /*color: #757575;*/
+    cursor: url(/Blog/images/mouses/cur1.cur), default;
+}
+
+nav {
     border-color: #1b1c1d !important;
 }
-/*m-back-grass*/
-.m-back-grass-small{
-    background: rgba(255,255,255,.15)!important;
-    border-radius: .28571429rem!important;
-}
-.m-back-grass{
-    background: rgba(255,255,255,.3)!important;
-    border-radius: .28571429rem!important;
-}
-.m-back-grass-deep{
-     background: rgb(255 255 255 / 70%)!important;
-     border-radius: .28571429rem!important;
- }.m-back-grass-medium{
-     background: rgb(255 255 255 / 50%)!important;
-     border-radius: .28571429rem!important;
- }
 
-  .m-border-radius{
-      border-radius: .28571429rem!important;
-  }
+/*m-back-grass*/
+.m-back-grass-small {
+    background: rgba(255, 255, 255, .15) !important;
+    border-radius: .28571429rem !important;
+}
+
+.m-back-grass {
+    background: rgba(255, 255, 255, .3) !important;
+    border-radius: .28571429rem !important;
+}
+
+.m-back-grass-deep {
+    background: rgb(255 255 255 / 70%) !important;
+    border-radius: .28571429rem !important;
+}
+
+.m-back-grass-medium {
+    background: rgb(255 255 255 / 50%) !important;
+    border-radius: .28571429rem !important;
+}
+
+.m-border-radius {
+    border-radius: .28571429rem !important;
+}
+
+.m-card {
+    -webkit-box-shadow: 0 0.25rem 1rem rgba(48, 55, 66, 0.15) !important;
+    box-shadow: 0 4px 16px rgba(48, 55, 66, 0.15) !important;
+    transition: all .5s cubic-bezier(.215, .61, .355, 1) !important;
+}
+.m-card-mod{
+    transition: all .5s cubic-bezier(.215, .61, .355, 1) !important;
+}
+.m-card:hover, .m-card-mod:hover{
+    box-shadow: 0 16px 32px 0 rgba(48, 55, 66, 0.15) !important;
+    transform: translate(0, -5px) !important;
+    transition: all .5s cubic-bezier(.215, .61, .355, 1) !important;
+}
+
 /*--------------padded----------------*/
-.m-padded-03em{
+.m-padded-03em {
     /*加重要级别 覆盖组件的样式*/
     padding: 0.3em !important;
 }
-.m-padded{
+
+.m-padded {
     /*加重要级别 覆盖组件的样式*/
     padding: 1em !important;
 }
-.m-padded-tb-mini{
+
+.m-padded-tb-mini {
     /*加重要级别 覆盖组件的样式*/
     padding-top: 0.2em !important;
     padding-bottom: 0.2em !important;
 }
-.m-padded-tb-tiny{
+
+.m-padded-tb-tiny {
     padding-top: 0.3em !important;
     padding-bottom: 0.3em !important;
 }
-.m-padded-tb-small{
+
+.m-padded-tb-small {
     padding-top: 0.5em !important;
     padding-bottom: 0.5em !important;
 }
-.m-padded-tb-1em{
+
+.m-padded-tb-1em {
     padding-top: 1em !important;
     padding-bottom: 1em !important;
 }
-.m-padded-tb-2em{
+
+.m-padded-tb-2em {
     padding-top: 2em !important;
     padding-bottom: 2em !important;
 }
-.m-padded-tb-4em{
+
+.m-padded-tb-4em {
     padding-top: 4em !important;
     padding-bottom: 4em !important;
 }
-.m-padded-tb-massive{
+
+.m-padded-tb-massive {
     padding-top: 5em !important;
     padding-bottom: 5em !important;
 }
-.m-padded-tb-huge{
+
+.m-padded-tb-huge {
     padding-top: 3em !important;
     padding-bottom: 3em !important;
 }
-.m-padded-lr-responsive{
+
+.m-padded-lr-responsive {
     padding-left: 3em !important;
     padding-right: 3em !important;
 }
+
 /*-------margin----------*/
-.m-mobile-top-15px{
+.m-mobile-top-15px {
     margin-top: 15px;
 }
-.m-margin-top-small{
-    margin-top:0.5em !important;
+
+.m-margin-top-small {
+    margin-top: 0.5em !important;
 }
-.m-margin-top{
-    margin-top:1em !important;
+
+.m-margin-top {
+    margin-top: 1em !important;
 }
-.m-margin-top-large{
-    margin-top:2em !important;
+
+.m-margin-top-large {
+    margin-top: 2em !important;
 }
-.m-margin-tb-tiny{
-    margin-top:0.3em !important;
-    margin-bottom:0.3em !important;
+
+.m-margin-tb-tiny {
+    margin-top: 0.3em !important;
+    margin-bottom: 0.3em !important;
 }
-.m-margin-bottom-small{
+
+.m-margin-bottom-small {
     margin-bottom: 0.5em !important;
 }
-.m-margin-bottom{
+
+.m-margin-bottom {
     margin-bottom: 1em !important;
 }
+
 /*--------text-------*/
-.m-text{
+.m-text {
     font-weight: 350 !important;
     letter-spacing: 1px !important;
     line-height: 1.8;
 }
-.m-text-thin{
+
+.m-text-thin {
     font-weight: 300 !important;
 }
-.m-text-spaced{
+
+.m-text-spaced {
     letter-spacing: 1px !important;
 }
-.m-text-lined{
+
+.m-text-lined {
     line-height: 1.8;
 }
+
 /*--------------opacity-----------*/
-.m-opacity{
+.m-opacity {
     opacity: 0.8 !important;
 }
-.m-opacity-tiny{
+
+.m-opacity-tiny {
     opacity: 0.6 !important;
 }
-.m-opacity-not{
+
+.m-opacity-not {
     opacity: 1 !important;
 }
+
 /*-------display-------*/
-.m-inline-block{
+.m-inline-block {
     display: inline-block !important;
 }
-
-.m-container{
+.m-container {
+    max-width: 50em !important;
+    margin: auto !important;
+}
+.m-container-normal {
     max-width: 72em !important;
     margin: auto !important;
 }
-.m-container-small{
+
+.m-container-small {
     max-width: 60em !important;
     margin: auto !important;
 }
+
 /*--------position--------*/
-.m-fixed{
+.m-fixed {
     position: fixed !important;
-    z-index: 1!important;
+    z-index: 1 !important;
 }
-.m-bottom-right{
-    bottom: 10%!important;
-    right: 0!important;
+
+.m-bottom-right {
+    bottom: 10% !important;
+    right: 0 !important;
 }
 
 /*-------m-shadow----------*/
 /*适配浏览器  所以有两个*/
-.m-shadow-small{
+.m-shadow-small {
     -webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2) !important;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2) !important;
 }
+
 /*------color-----*/
-.m-black{
+.m-black {
     color: rgba(0, 0, 0, 0.77) !important;
 }
-.m-teal{
+
+.m-teal {
     color: #00B5AD !important;
 }
+
 /*-------opacity-------*/
-.m-top-right{
+.m-top-right {
     position: absolute;
     top: 15px;
     right: 5px;
 }
 
 /*    */
-.m-mobile-show{
+.m-mobile-show {
     display: none !important;
 }
+
 /*媒体查询*/
 @media screen and (max-width: 768px) {
-    .m-mobile-hide{
+    .m-mobile-hide {
         display: none !important;
     }
-    .m-mobile-show{
+
+    .m-mobile-show {
         display: block !important;
     }
-    .m-mobile-wide{
+
+    .m-mobile-wide {
         width: 100% !important;
     }
-    .m-padded-lr-responsive{
+
+    .m-padded-lr-responsive {
         padding-left: 0 !important;
         padding-right: 0 !important;
     }
-    .m-mobile-clear{
+
+    .m-mobile-clear {
         padding-left: 0 !important;
         padding-right: 0 !important;
     }
@@ -236,7 +304,8 @@ nav{
     cursor: pointer;
     transition: all .1s ease-out;
 }
-.m-toTop i{
+
+.m-toTop i {
     font-size: 24px;
     margin-top: 9px !important;
     margin-left: 3px !important;
